Qualify production GraalPy resources against the Ubuntu ABI (#278)
* fix: select production-compatible GraalPy resources (#250)

* test: record native image qualification and share fixtures